cluster/home/home-assistant/ssh-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant-ssh
  namespace: home-assistant
spec:
  type: LoadBalancer
  ports:
    - name: ssh
      port: 22
      targetPort: 2222
  selector:
    app: home-assistant-ssh
